objects/ASI_CRM_CN_PH_Not_Approved_Daily_Count__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Number_of_Payment_Request__c</fullName>
        <label>Number of Payment Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PH (CN) Not Approved Daily Count</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PH (CN) Not Approved Daily Count</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>